Temp fix for video box being too wide

--- a/src/components/About/Video/Video.css
+++ b/src/components/About/Video/Video.css
@@ -9,6 +9,8 @@
   .video-wrapper {
     width: 90vw;
     height: 90vw;
+
+    max-width: 100%;
   }
 }
 
